[package]
name = "sui-rust-operator"
version = "0.1.8"
edition = "2021"
authors = ["v1xingyue <qixingyue@gmail.com>"]
description = "sui operator implement with rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/v1xingyue/sui-rust-operator"
repository = "https://github.com/v1xingyue/sui-rust-operator.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.26"
tokio = { version = "1", features = ["full"] }
reqwest = {version="0.11.18",features=["json"]}
serde_json = "1.0.100"
serde = { version = "1.0", features = ["derive"] }

rand = "0.7"
ed25519-dalek = "1"
rand_core = { version = "0.5" }
hex = "0.4.3"
blake2b_simd = "1.0.1"
clap = { version = "4.3.11", features = ["derive"] }
base64 = "0.21.2"
actix-web = "4.3.1"


# [[bin]]
# name = "cli"
# path = "src/bin/cli.rs"

